opam-version: "2.0"
maintainer: "David Kaloper Meršinjak <dk505@cam.ac.uk>"
authors: ["David Kaloper Meršinjak <dk505@cam.ac.uk>"]
homepage: "https://github.com/pqwy/lru"
doc: "https://pqwy.github.io/lru/doc"
license: "ISC"
dev-repo: "git+https://github.com/pqwy/lru.git"
bug-reports: "https://github.com/pqwy/lru/issues"
synopsis: "Scalable LRU caches"
build: [ [ "dune" "subst" ] {pinned}
         [ "dune" "build" "-p" name "-j" jobs ]
         [ "dune" "runtest" "-p" name ] {with-test} ]
depends: [
  "ocaml" {>="4.03.0"}
  "dune"  {build & >= "1.7"}
  "psq"   {>="0.2.0"}
  "qcheck-core"     {with-test}
  "qcheck-alcotest" {with-test}
  "alcotest"        {with-test}
]
